Try again to fix animal sniffer error.